k3s_with_cloudflare/modules/k3s/templates/ingress_rules/ah-ah-ah_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ah-ah-ah-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-stage"
spec:
  rules:
  - host: ${fqdn}
    http:
      paths:
      - path: /fission-functions/
        backend:
          serviceName: ah-ah-ah
          servicePort: 80
  tls:
  - hosts:
    - ${fqdn}
    secretName: ah-ah-ah-tls
