k3s_with_cloudflare/modules/k3s/templates/ingress_rules/fission_ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fission-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-stage"
spec:
  rules:
  - host: ${fqdn}
    http:
      paths:
      - path: /
        backend:
          serviceName: router
          servicePort: 80
  tls:
  - hosts:
    - ${fqdn}
    secretName: fission-tls
